updates in homepage
-added top songs section
-added a section to allow users to play offline/local file from device
-added miniplayer to display status of current playing song from anywhere in the app
-minor changes in songplayer colors

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -60,6 +61,9 @@
             android:theme="@style/Theme.Material3.DynamicColors.Dark.NoActionBar"/>
 
         <activity android:name=".Profile"
+            android:exported="true"
+            android:theme="@style/Theme.Material3.DynamicColors.Dark.NoActionBar"/>
+        <activity android:name=".EditProfile"
             android:exported="true"
             android:theme="@style/Theme.Material3.DynamicColors.Dark.NoActionBar"/>
 
